# Finlab

./: README.md
finlab/: LICENSE  README.md  pyproject.toml  requirements.txt
finlab/examples/: quickstart.py
finlab/src/quantfinlab/: __init__.py  backtest.py  data.py  features.py  metrics.py  plotting.py
finlab/src/quantfinlab/models/: __init__.py  arima.py  garch.py  lstm.py
finlab/src/quantfinlab/strategies/: __init__.py  mean_reversion.py  momentum.py
finlab/tests/: test_backtest.py  test_metrics.py
