[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-finlab"
version = "0.1.0"
description = "Financial Data Analysis & Backtesting: ARIMA, GARCH, LSTM, momentum/mean-reversion strategies"
authors = [{name = "Aldiyar Orazalin"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
